--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular CDMX | EdoMex Reemplacamiento 2026 | Refrendo Morelos #1</title>
+    <title>Gestoría Vehicular CDMX y EdoMex | Gestor de Autos Oficial #1</title>
     <meta name="description"
-        content="Gestoría vehicular #1 en CDMX y EdoMex 2026. Alta de placas, Reemplacamiento Estado de México y Licencia Permanente CDMX. Trámites 100% seguros y rápidos. ¡Cotiza hoy!">
+        content="Tu Gestoría Vehicular de confianza en CDMX y Estado de México. Realizamos Alta de Placas, Reemplacamiento 2026 y Licencias. Sin filas, seguro y a domicilio.">
     <meta name="keywords"
-        content="gestoria vehicular cdmx, reemplacamiento edomex 2026, licencia permanente cdmx, alta de placas cdmx, gestoria vehicular estado de mexico, placas edomex 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, refrendo morelos 2026, costo refrendo morelos 2026, gestor de autos cdmx, tramites vehiculares interlomax, huixquilucan, chalco, ixtapaluca, tlalnepantla, naucalpan">
+        content="gestoria vehicular, gestor de autos, gestoria vehicular cdmx, gestoria vehicular edomex, gestor de placas, reemplacamiento edomex 2026, gestoria cerca de mi, gestor vehicular naucalpan, gestoria vehicular tlalnepantla, gestoria vehicular chalco, placas cdmx, licencia permanente">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -356,20 +356,22 @@
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
                         <span style="font-weight: 800; color: white; display: block;"
-                            data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX y Estado de México</span>
+                            data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX y EdoMex</span>
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Licencia Permanente · Reemplacamiento · Alta de Placas
+                            Tu Gestor de Confianza para Placas y Licencias
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.2em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
-                            Chalco · Ixtapaluca · Huixquilucan · Naucalpan · CDMX
+                            Gestoría en Chalco · Naucalpan · Tlalnepantla · CDMX
                         </span>
                     </h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Buscas Placas en CDMX o EdoMex?</strong> <span
-                            data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México y CDMX</b>.
-                            Sin filas. Cubrimos <b>Chalco, Huixquilucan, Interlomas, Naucalpan y todo CDMX</b>.</span>
+                    <p><strong data-i18n="hero_desc_bold">¿Buscas una Gestoría Confiable?</strong> <span
+                            data-i18n="hero_desc_text">Somos tu mejor opción de <b>Gestor de Autos en CDMX y Estado de
+                                México</b>.
+                            Olvídate de las filas. Cubrimos <b>Gestoría en Naucalpan, Tlalnepantla, Ecatepec,
+                                Huixquilucan y todo CDMX</b>.</span>
                     </p>
                     <div class="hero-buttons">
                         <a href="https://wa.me/525535757364?text=Hola,%20vengo%20por%20trámites%20online"
@@ -463,6 +465,56 @@
 
 
 
+
+        <!-- Cobertura Section (SEO Boost for "Gestoría en...") -->
+        <section class="section-padding coverage-seo" style="background-color: #f8fafc; padding-bottom: 2rem;">
+            <div class="container">
+                <div class="section-title" style="margin-bottom: 2rem;">
+                    <h2>Cobertura de Gestoría Vehicular</h2>
+                    <p>Llevamos nuestros servicios de gestoría hasta tu domicilio en las zonas más importantes.</p>
+                </div>
+                <!-- Pills Layout for SEO Keywords -->
+                <div class="coverage-grid" style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Naucalpan</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Tlalnepantla</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Atizapán</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Ecatepec</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Huixquilucan</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Cuautitlán Izcalli</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Metepec</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Toluca</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Chalco</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Nezahualcóyotl</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>CDMX</strong></a>
+                    <a href="#contacto" class="location-pill">Gestoría en <strong>Coyoacán</strong></a>
+                </div>
+                <style>
+                    .location-pill {
+                        background: white;
+                        padding: 0.8rem 1.5rem;
+                        border-radius: 50px;
+                        color: #334155;
+                        text-decoration: none;
+                        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+                        border: 1px solid #e2e8f0;
+                        transition: all 0.3s ease;
+                        font-size: 0.95rem;
+                    }
+
+                    .location-pill:hover {
+                        background: #2563eb;
+                        color: white;
+                        transform: translateY(-2px);
+                        box-shadow: 0 4px 6px rgba(37, 99, 235, 0.2);
+                        border-color: #2563eb;
+                    }
+
+                    .location-pill strong {
+                        font-weight: 700;
+                    }
+                </style>
+            </div>
+        </section>
 
         <!-- Services Section -->
         <section id="servicios" class="section-padding services">
