--- a/tramites-edomex.html
+++ b/tramites-edomex.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Trámites del Estado de México en Línea | Gestoría Edomex #1</title>
+    <title>Gestoría Vehicular EdoMex | Reemplacamiento y Placas #1</title>
     <meta name="description"
-        content="Gestión de Trámites del Estado de México 2026. Realiza tu reemplacamiento, alta de placas, baja y cambio de propietario sin filas. ¡Cotiza Online!">
+        content="Tu Gestoría Vehicular en el Estado de México. Realizamos Reemplacamiento 2026, Alta de Placas y Cambio de Propietario. Sin citas, rápido y seguro.">
     <meta name="keywords"
-        content="tramites del estado de mexico, reemplacamiento edomex 2026, alta de placas edomex, baja de placas edomex, cambio de propietario estado de mexico, tenencia edomex 2026, verificacion edomex, gestoria vehicular edomex, placas edomex precio, gestor de autos edomex">
+        content="gestoria vehicular edomex, gestor de placas edomex, reemplacamiento edomex 2026, gestoria cerca de mi, gestor de autos estado de mexico, placas edomex, gestoria vehicular naucalpan, gestoria vehicular tlalnepantla, gestoria vehicular chalco">
     <link rel="canonical" href="https://gestordeautos.com.mx/tramites-edomex.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -41,17 +41,17 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/tramites-edomex.html">
-    <meta property="og:title" content="Trámites Vehiculares Estado de México | Gestor de Autos">
+    <meta property="og:title" content="Gestoría Vehicular EdoMex | Gestor de Autos">
     <meta property="og:description"
-        content="Soluciona tus trámites vehiculares del Estado de México hoy mismo. Reemplacamiento, placas y licencias sin salir de casa.">
+        content="Olvídate de las filas. Somos tu Gestoría Vehicular en el Estado de México. Reemplacamiento y Placas a domicilio.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/tramites-edomex.html">
-    <meta property="twitter:title" content="Gestoría Vehicular EdoMex | Trámites Rápidos">
+    <meta property="twitter:title" content="Gestoría Vehicular EdoMex | Servicio Rápido y Seguro">
     <meta property="twitter:description"
-        content="Alta de placas, reemplacamiento y trámites vehiculares en el Estado de México. Sin filas, 100% seguro.">
+        content="Alta de placas, reemplacamiento y trámites vehiculares en el Estado de México. Tu Gestor de confianza.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data for Edomex Service -->
@@ -60,7 +60,7 @@
       "@context": "https://schema.org",
       "@type": "Service",
       "serviceType": "Gestoría Vehicular Estado de México",
-      "name": "Trámites Vehiculares EdoMex",
+      "name": "Gestoría Vehicular EdoMex",
       "description": "Gestión integral de trámites vehiculares en el Estado de México: Alta de placas, Reemplacamiento, Cambio de Propietario y Bajas.",
       "provider": {
         "@type": "LocalBusiness",
@@ -75,7 +75,7 @@
       },
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
-        "name": "Catálogo de Trámites EdoMex",
+        "name": "Catálogo de Gestoría EdoMex",
         "itemListElement": [
           { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Reemplacamiento EdoMex 2026", "url": "https://gestordeautos.com.mx/tramites-edomex.html" } },
           { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas EdoMex", "url": "https://gestordeautos.com.mx/tramites-edomex.html" } },
@@ -102,18 +102,18 @@
         },
         {
           "@type": "Question",
-          "name": "¿Cuánto cuesta el alta de placas en el Estado de México?",
+          "name": "¿Cuánto cobra un Gestor Vehicular en EdoMex?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "El costo varía dependiendo del valor factura del vehículo y el modelo. En Gestor de Autos te cotizamos gratis vía WhatsApp y gestionamos el pago de derechos por ti."
+            "text": "Nuestros honorarios de gestoría son muy accesibles y varían según el trámite. Te ahorramos tiempo, filas y posibles errores. Cotiza gratis vía WhatsApp."
           }
         },
         {
           "@type": "Question",
-          "name": "¿Se puede hacer el cambio de propietario en línea en Edomex?",
+          "name": "¿Es seguro contratar una Gestoría Vehicular?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Sí, nosotros realizamos el cambio de propietario 100% en línea. Solo necesitamos fotos legibles de tus documentos y nosotros nos encargamos del trámite ante la SEMOVI del Estado de México."
+            "text": "Sí, en Gestor de Autos somos una gestoría establecida con años de experiencia y cientos de reseñas positivas. Garantizamos la legalidad de tus documentos."
           }
         }
       ]
@@ -135,7 +135,7 @@
         {
           "@type": "ListItem",
           "position": 2,
-          "name": "Trámites del Estado de México",
+          "name": "Gestoría EdoMex",
           "item": "https://gestordeautos.com.mx/tramites-edomex.html"
         }
       ]
@@ -226,8 +226,7 @@
             <a href="/" class="logo">
                 <div class="logo-container">
                     <img decoding="async" src="assets/images/logo.jpg"
-                        alt="Logo de Gestor de Autos - Trámites Vehiculares EdoMex" class="logo-img"
-                        fetchpriority="high">
+                        alt="Logo de Gestor de Autos - Gestoría Vehicular EdoMex" class="logo-img" fetchpriority="high">
                 </div>
                 <div class="logo-text">
                     <div class="site-title">Gestor de <span>Autos</span></div>
@@ -272,15 +271,15 @@
         <!-- Specialized Hero Section -->
         <section class="edomex-hero">
             <div class="container">
-                <h1 style="font-size: 3rem; margin-bottom: 1rem;">Trámites del Estado de México (EdoMex)</h1>
+                <h1 style="font-size: 3rem; margin-bottom: 1rem;">Gestoría Vehicular EdoMex</h1>
                 <p style="font-size: 1.25rem; max-width: 700px; margin: 0 auto 2rem; color: #cbd5e1;">
-                    Gestoría oficial para <b>Reemplacamiento, Alta de Placas y Cambio de Propietario</b>.
-                    Evita citas, filas y complicaciones en el portal de servicios al contribuyente.
+                    Tu Gestor de Confianza para <b>Reemplacamiento, Alta de Placas y Cambio de Propietario</b>.
+                    Evita citas y filas. Nosotros lo hacemos por ti.
                 </p>
                 <div class="hero-buttons" style="justify-content: center;">
                     <a href="https://wa.me/525535757364?text=Hola,%20quiero%20cotizar%20un%20trámite%20del%20EdoMex"
                         class="btn btn-whatsapp" target="_blank">
-                        <i class="fab fa-whatsapp"></i> Cotizar Trámite Ahora
+                        <i class="fab fa-whatsapp"></i> Cotizar con un Gestor
                     </a>
                 </div>
             </div>
@@ -290,8 +289,8 @@
         <section class="section-padding">
             <div class="container">
                 <div class="section-title">
-                    <h2>Servicios Vehiculares Estado de México</h2>
-                    <p>Soluciones rápidas y seguras para tu auto o moto en el Estado de México.</p>
+                    <h2>Servicios de Gestoría Vehicular EdoMex</h2>
+                    <p>Soluciones rápidas y seguras con tu Gestor de Autos #1 en el Estado de México.</p>
                 </div>
 
                 <div class="services-grid"
@@ -300,44 +299,44 @@
                     <!-- Card 1: Reemplacamiento -->
                     <div class="service-card-edomex">
                         <div class="service-icon-lg"><i class="fas fa-sync-alt"></i></div>
-                        <h3>Reemplacamiento EdoMex 2026</h3>
-                        <p>¿Tus placas son 2021 o anteriores? Realizamos tu renovación obligatoria de placas de forma
-                            rápida. Entrega a domicilio o digital.</p>
-                        <a href="https://wa.me/525535757364?text=Info%20Reemplacamiento%20EdoMex" class="btn"
-                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Más info <i
+                        <h3>Gestoría de Reemplacamiento 2026</h3>
+                        <p>¿Tus placas son 2021 o anteriores? Como tu Gestor de Confianza, realizamos tu renovación
+                            obligatoria sin que salgas de casa.</p>
+                        <a href="https://wa.me/525535757364?text=Info%20Gestoría%20Reemplacamiento" class="btn"
+                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Contactar Gestor <i
                                 class="fas fa-arrow-right"></i></a>
                     </div>
 
                     <!-- Card 2: Alta de Placas -->
                     <div class="service-card-edomex">
                         <div class="service-icon-lg"><i class="fas fa-car-side"></i></div>
-                        <h3>Alta de Placas (Auto Nuevo/Usado)</h3>
-                        <p>Emplacamos tu vehículo nuevo, usado o traído de otro estado. Incluye tarjeta de circulación y
-                            engomado. Sin cita previa.</p>
-                        <a href="https://wa.me/525535757364?text=Info%20Alta%20Placas%20EdoMex" class="btn"
-                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Más info <i
+                        <h3>Gestor de Alta de Placas</h3>
+                        <p>Emplacamos tu vehículo nuevo o usado. Servicio de Gestoría profesional para obtener tus
+                            placas y tarjeta de circulación.</p>
+                        <a href="https://wa.me/525535757364?text=Info%20Gestor%20Placas" class="btn"
+                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Contactar Gestor <i
                                 class="fas fa-arrow-right"></i></a>
                     </div>
 
                     <!-- Card 3: Cambio de Propietario -->
                     <div class="service-card-edomex">
                         <div class="service-icon-lg"><i class="fas fa-exchange-alt"></i></div>
-                        <h3>Cambio de Propietario</h3>
-                        <p>Actualiza legalmente la propiedad de tu vehículo. Indispensable para vender o asegurar tu
-                            auto correctamente en el Estado de México.</p>
-                        <a href="https://wa.me/525535757364?text=Info%20Cambio%20Propietario%20EdoMex" class="btn"
-                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Más info <i
+                        <h3>Gestoría Cambio de Propietario</h3>
+                        <p>Actualiza la propiedad legalmente. Tu Gestor se encarga de todo el trámite ante SEMOVI sin
+                            que pierdas tiempo.</p>
+                        <a href="https://wa.me/525535757364?text=Info%20Gestoría%20Propietario" class="btn"
+                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Contactar Gestor <i
                                 class="fas fa-arrow-right"></i></a>
                     </div>
 
                     <!-- Card 4: Bajas y Permisos -->
                     <div class="service-card-edomex">
                         <div class="service-icon-lg"><i class="fas fa-file-invoice-dollar"></i></div>
-                        <h3>Bajas y Permisos Provisionales</h3>
-                        <p>Tramitamos baja de placas por robo, siniestro o venta. También permisos provisionales para
-                            circular sin placas legalmente.</p>
-                        <a href="https://wa.me/525535757364?text=Info%20Bajas%20y%20Permisos" class="btn"
-                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Más info <i
+                        <h3>Gestor de Bajas y Permisos</h3>
+                        <p>Gestoría para baja de placas por robo o venta. Tramitamos tu permiso provisional para
+                            circular legalmente.</p>
+                        <a href="https://wa.me/525535757364?text=Info%20Gestor%20Bajas" class="btn"
+                            style="margin-top: 1rem; color: #2563eb; padding-left: 0;">Contactar Gestor <i
                                 class="fas fa-arrow-right"></i></a>
                     </div>
 
@@ -348,42 +347,39 @@
         <!-- Detailed SEO Content -->
         <section class="content-section">
             <div class="container content-text">
-                <h2>¿Por qué realizar tus Trámites del Estado de México con nosotros?</h2>
+                <h2>¿Por qué contratar una Gestoría Vehicular en EdoMex?</h2>
                 <p>
-                    El <strong>Portal de Servicios al Contribuyente del Estado de México</strong> puede ser confuso y
-                    presentar fallas, además de que conseguir una cita presencial en los Centros de Servicios Fiscales
-                    suele demorar semanas.
-                    En <strong>Gestor de Autos</strong>, simplificamos todo el proceso administrativa de control
-                    vehicular.
+                    El <strong>Portal de Servicios al Contribuyente</strong> suele ser complicado. Contratar a un
+                    <strong>Gestor Vehicular Certificado</strong> te garantiza rapidez y seguridad.
+                    En <strong>Gestor de Autos</strong>, somos líderes en gestoría vehicular en Naucalpan, Tlalnepantla,
+                    Ecatepec y todo el Estado de México.
                 </p>
 
-                <h3>Beneficios de nuestra Gestoría Vehicular Edomex</h3>
+                <h3>Beneficios de nuestra Gestoría Vehicular</h3>
                 <ul>
-                    <li><strong>Sin Citas:</strong> No necesitas formarte ni buscar citas disponibles en la madrugada.
+                    <li><strong>Sin Citas:</strong> Tu Gestor se encarga de todo, olvídate de madrugar.</li>
+                    <li><strong>Gestoría 100% Online:</strong> Envía tus documentos por WhatsApp a tu gestor asignado.
                     </li>
-                    <li><strong>100% Online:</strong> Envíanos tus documentos por WhatsApp y nosotros hacemos el resto.
+                    <li><strong>Garantía Total:</strong> Somos una Gestoría establecida con entregas seguras.</li>
+                    <li><strong>Cobertura de Gestoría:</strong> Atendemos Chalco, Huixquilucan, Izcalli, Metepec y más.
                     </li>
-                    <li><strong>Garantía y Seguridad:</strong> Pagos verificados y entrega de documentos oficiales.</li>
-                    <li><strong>Cobertura Total:</strong> Atendemos Chalco, Ixtapaluca, Nezahualcóyotl, Ecatepec,
-                        Naucalpan, Tlalnepantla, Huixquilucan y todo el Estado de México.</li>
                 </ul>
 
-                <h2>Costos y Requisitos 2026</h2>
+                <h2>Costos de Gestoría 2026</h2>
                 <p>
-                    Los costos de los trámites vehiculares en el Estado de México se actualizan anualmente conforme al
-                    Código Financiero.
-                    El costo del refrendo anual 2026 debe cubrirse durante los primeros tres meses del año para obtener
-                    el subsidio a la Tenencia (si aplica para tu vehículo).
+                    Nuestros honorarios de gestoría son transparentes. El costo del refrendo o tenencia 2026 se paga
+                    directo a gobierno,
+                    nosotros solo cobramos por el servicio de gestión profesional.
                 </p>
                 <p>
-                    Para el <strong>Reemplacamiento EdoMex 2026</strong>, es obligatorio si tus placas fueron expedidas
-                    en 2021. Circular con placas vencidas amerita corralón y una multa considerable. No te arriesgues.
+                    Para el <strong>Reemplacamiento EdoMex 2026</strong>, evita multas y deja que un Gestor experto
+                    regularice tu auto hoy mismo.
                 </p>
 
                 <div style="text-align: center; margin-top: 3rem;">
-                    <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20experta%20con%20mi%20auto"
+                    <a href="https://wa.me/525535757364?text=Hola,%20busco%20gestoría%20para%20mi%20auto"
                         class="btn btn-primary" style="padding: 1rem 2rem; font-size: 1.1rem;">
-                        <i class="fab fa-whatsapp"></i> Iniciar Trámite con un Experto
+                        <i class="fab fa-whatsapp"></i> Contactar a mi Gestor Ahora
                     </a>
                 </div>
             </div>
