--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         {
           "@type": "LocalBusiness",
           "@id": "https://gestordeautos.com.mx/#organization",
-          "name": "Gestor de Autos - Gestoría Vehicular EdoMex y CDMX",
+          "name": "Gestor de Autos - Gestoría Vehicular #1 EdoMex y CDMX",
           "image": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "logo": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "telephone": "+525535757364",
           "url": "https://gestordeautos.com.mx",
-          "description": "Expertos en gestoría vehicular en el Estado de México y CDMX. Especialistas en alta de placas, licencias de conducir y cambios de propietario en Chalco, Ixtapaluca, Huixquilucan, Interlomas y más.",
+          "description": "Tu Gestoría Vehicular de confianza en el Estado de México y CDMX. Especialistas en alta de placas, reemplacamiento y cambios de propietario en Naucalpan, Tlalnepantla, Ecatepec, Huixquilucan y todo EdoMex.",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Servicio Digital y Domicilio",
@@ -125,27 +125,27 @@
               "@type": "Review",
               "author": { "@type": "Person", "name": "Ricardo Mendez" },
               "datePublished": "2026-02-10",
-              "reviewBody": "Excelente servicio para el refrendo de Morelos. Todo fue por WhatsApp y quedó listo en menos de 24 horas. Muy recomendables.",
+              "reviewBody": "Excelente servicio de gestoría para mi refrendo. Todo fue por WhatsApp y quedó listo rapidísimo.",
               "reviewRating": { "@type": "Rating", "ratingValue": "5" }
             },
             {
               "@type": "Review",
               "author": { "@type": "Person", "name": "Carla Esparza" },
               "datePublished": "2026-01-15",
-              "reviewBody": "Tramité mi licencia permanente de CDMX con ellos y fue súper rápido. Sin filas y muy profesionales.",
+              "reviewBody": "El mejor gestor de autos que he contactado. Tramité mi licencia permanente sin filas y muy seguro.",
               "reviewRating": { "@type": "Rating", "ratingValue": "5" }
             }
           ],
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
-            "name": "Servicios Vehiculares",
+            "name": "Servicios de Despacho de Gestoría",
             "itemListElement": [
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas CDMX y EdoMex 2026", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia Permanente Tipo A CDMX", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Reemplacamiento EdoMex 2026", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario EdoMex y CDMX", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Regularización REPUVE y Autos Extranjeros", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Refrendo Vehicular Morelos 2026", "serviceType": "Legal" } }
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestor de Alta de Placas CDMX y EdoMex", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Licencia Permanente Tipo A", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Reemplacamiento EdoMex 2026", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestor Cambio de Propietario", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Legalización y REPUVE", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestor Vehicular Morelos", "serviceType": "Gestoría" } }
             ]
           }
         },
