--- a/tramites-edomex.html
+++ b/tramites-edomex.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular EdoMex | Reemplacamiento y Placas #1</title>
+    <title>Gestoría Vehicular Estado de México | Placas y Reemplacamiento 2026</title>
     <meta name="description"
-        content="Tu Gestoría Vehicular en el Estado de México. Realizamos Reemplacamiento 2026, Alta de Placas y Cambio de Propietario. Sin citas, rápido y seguro.">
+        content="Gestoría Vehicular en el Estado de México. Realizamos Reemplacamiento 2026, Alta de Placas, Bajas y Cambio de Propietario Urgente. Cobertura en Naucalpan, Tlalnepantla, Chalco y más.">
     <meta name="keywords"
-        content="gestoria vehicular edomex, gestor de placas edomex, reemplacamiento edomex 2026, gestoria cerca de mi, gestor de autos estado de mexico, placas edomex, gestoria vehicular naucalpan, gestoria vehicular tlalnepantla, gestoria vehicular chalco">
+        content="gestoria vehicular estado de mexico, gestoria vehicular edomex, reemplacamiento edomex 2026, placas edomex, gestoria en naucalpan, gestoria en tlalnepantla, gestoria en chalco, gestor de placas, alta de placas edomex, cambio de propietario edomex">
     <link rel="canonical" href="https://gestordeautos.com.mx/tramites-edomex.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -271,10 +271,10 @@
         <!-- Specialized Hero Section -->
         <section class="edomex-hero">
             <div class="container">
-                <h1 style="font-size: 3rem; margin-bottom: 1rem;">Gestoría Vehicular EdoMex</h1>
+                <h1 style="font-size: 3rem; margin-bottom: 1rem;">Gestoría Vehicular Estado de México</h1>
                 <p style="font-size: 1.25rem; max-width: 700px; margin: 0 auto 2rem; color: #cbd5e1;">
-                    Tu Gestor de Confianza para <b>Reemplacamiento, Alta de Placas y Cambio de Propietario</b>.
-                    Evita citas y filas. Nosotros lo hacemos por ti.
+                    Expertos en <b>Reemplacamiento 2026, Alta de Placas y Cambio de Propietario</b>.
+                    Servicio a domicilio en Naucalpan, Tlalnepantla, Chalco y todo EdoMex.
                 </p>
                 <div class="hero-buttons" style="justify-content: center;">
                     <a href="https://wa.me/525535757364?text=Hola,%20quiero%20cotizar%20un%20trámite%20del%20EdoMex"
@@ -382,6 +382,26 @@
                         <i class="fab fa-whatsapp"></i> Contactar a mi Gestor Ahora
                     </a>
                 </div>
+            </div>
+        </section>
+
+        <!-- Localized Keyword Block for EdoMex -->
+        <section class="content-section" style="padding-top: 0; background-color: #f8fafc;">
+            <div class="container content-text" style="border-top: 1px solid #e2e8f0; padding-top: 2rem;">
+                <h4 style="font-size: 1.1rem; color: #475569; margin-bottom: 1rem;">Cobertura de Gestoría en Municipios
+                    del Estado de México</h4>
+                <p style="font-size: 0.9rem; color: #64748b; line-height: 1.6;">
+                    <strong>Zona Norte y Poniente:</strong> Gestoría Vehicular en Naucalpan de Juárez, Tlalnepantla de
+                    Baz, Atizapán de Zaragoza, Cuautitlán Izcalli, Huixquilucan (Interlomas, Bosque Real), Nicolás
+                    Romero.
+                </p>
+                <p style="font-size: 0.9rem; color: #64748b; line-height: 1.6; margin-top: 0.5rem;">
+                    <strong>Zona Oriente y Volcanes:</strong> Gestoría Vehicular en Ecatepec de Morelos, Nezahualcóyotl,
+                    Chalco, Valle de Chalco Solidaridad, Ixtapaluca, Chimalhuacán, Texcoco, La Paz.
+                </p>
+                <p style="font-size: 0.9rem; color: #64748b; line-height: 1.6; margin-top: 0.5rem;">
+                    <strong>Valle de Toluca:</strong> Gestoría Vehicular en Toluca, Metepec, Lerma, San Mateo Atenco.
+                </p>
             </div>
         </section>
 
