--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular CDMX y EdoMex | Gestor de Autos Oficial #1</title>
+    <title>Gestoría Vehicular CDMX y Estado de México | Trámites Urgentes y Placas</title>
     <meta name="description"
-        content="Tu Gestoría Vehicular de confianza en CDMX y Estado de México. Realizamos Alta de Placas, Reemplacamiento 2026 y Licencias. Sin filas, seguro y a domicilio.">
+        content="Gestoría Vehicular en CDMX y Estado de México. Alta de Placas, Reemplacamiento 2026, Cambio de Propietario y Licencia Permanente. Trámites urgentes y a domicilio.">
     <meta name="keywords"
-        content="gestoria vehicular, gestor de autos, gestoria vehicular cdmx, gestoria vehicular edomex, gestor de placas, reemplacamiento edomex 2026, gestoria cerca de mi, gestor vehicular naucalpan, gestoria vehicular tlalnepantla, gestoria vehicular chalco, placas cdmx, licencia permanente">
+        content="gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestor de placas edomex, reemplacamiento 2026, alta de placas, licencia permanente cdmx, gestoria en tlalpan, gestoria en naucalpan, gestoria en chalco, gestoria vehicular zona volcanes, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -140,12 +140,12 @@
             "@type": "OfferCatalog",
             "name": "Servicios de Despacho de Gestoría",
             "itemListElement": [
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestor de Alta de Placas CDMX y EdoMex", "serviceType": "Gestoría" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Licencia Permanente Tipo A", "serviceType": "Gestoría" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Reemplacamiento EdoMex 2026", "serviceType": "Gestoría" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestor Cambio de Propietario", "serviceType": "Gestoría" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Legalización y REPUVE", "serviceType": "Gestoría" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestor Vehicular Morelos", "serviceType": "Gestoría" } }
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Vehicular CDMX y EdoMex", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia Permanente CDMX", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Reemplacamiento EdoMex 2026", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario Urgente", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas Autos y Motos", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Permisos de Circulación Guerrero", "serviceType": "Gestoría" } }
             ]
           }
         },
@@ -306,7 +306,7 @@
             <a href="#" class="logo">
                 <div class="logo-container">
                     <img decoding="async" src="assets/images/logo.jpg"
-                        alt="Logo de Gestor de Autos - Trámites Vehiculares EdoMex" class="logo-img"
+                        alt="Logo de Gestoría Vehicular CDMX y EdoMex - Trámites Urgentes" class="logo-img"
                         fetchpriority="high">
                 </div>
                 <div class="logo-text">
@@ -513,6 +513,31 @@
                         font-weight: 700;
                     }
                 </style>
+            </div>
+        </section>
+
+        <!-- SEO Content Block: Areas of Coverage (Low Visual Priority, High SEO) -->
+        <section class="section-padding" style="background-color: #f1f5f9; padding-top: 1rem; padding-bottom: 2rem;">
+            <div class="container">
+                <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: #475569;">Zonas de Cobertura de Gestoría
+                    Vehicular</h3>
+                <p style="font-size: 0.9rem; color: #64748b; line-height: 1.6;">
+                    Brindamos servicio de <strong>Gestoría Vehicular a Domicilio</strong> en las principales alcaldías
+                    de la <strong>CDMX</strong>:
+                    Coyoacán, Tlalpan, Benito Juárez, Cuauhtémoc, Miguel Hidalgo, Iztapalapa, Gustavo A. Madero, Álvaro
+                    Obregón, Cuajimalpa, Azcapotzalco, Venustiano Carranza, Iztacalco y Xochimilco.
+                </p>
+                <p style="font-size: 0.9rem; color: #64748b; line-height: 1.6; margin-top: 0.5rem;">
+                    También cubrimos todo el <strong>Estado de México</strong> y <strong>Zona Volcanes</strong>:
+                    Gestoría en Naucalpan, Tlalnepantla, Atizapán de Zaragoza, Huixquilucan (Interlomas, Bosque Real),
+                    Ecatepec, Nezahualcóyotl, Chalco, Valle de Chalco, Ixtapaluca, Chimalhuacán, Texcoco, Coacalco,
+                    Cuautitlán Izcalli, Metepec y Toluca.
+                </p>
+                <p style="font-size: 0.9rem; color: #64748b; line-height: 1.6; margin-top: 0.5rem;">
+                    Realizamos trámites urgentes: <strong>Alta de Placas</strong>, <strong>Baja de Placas</strong>,
+                    <strong>Cambio de Propietario</strong>, <strong>Reposición de Tarjeta de Circulación</strong> y
+                    <strong>Licencia Permanente</strong>.
+                </p>
             </div>
         </section>
 
