--- a/index.html
+++ b/index.html
@@ -466,55 +466,7 @@
 
 
 
-        <!-- Cobertura Section (SEO Boost for "Gestoría en...") -->
-        <section class="section-padding coverage-seo" style="background-color: #f8fafc; padding-bottom: 2rem;">
-            <div class="container">
-                <div class="section-title" style="margin-bottom: 2rem;">
-                    <h2>Cobertura de Gestoría Vehicular</h2>
-                    <p>Llevamos nuestros servicios de gestoría hasta tu domicilio en las zonas más importantes.</p>
-                </div>
-                <!-- Pills Layout for SEO Keywords -->
-                <div class="coverage-grid" style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Naucalpan</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Tlalnepantla</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Atizapán</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Ecatepec</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Huixquilucan</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Cuautitlán Izcalli</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Metepec</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Toluca</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Chalco</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Nezahualcóyotl</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>CDMX</strong></a>
-                    <a href="#contacto" class="location-pill">Gestoría en <strong>Coyoacán</strong></a>
-                </div>
-                <style>
-                    .location-pill {
-                        background: white;
-                        padding: 0.8rem 1.5rem;
-                        border-radius: 50px;
-                        color: #334155;
-                        text-decoration: none;
-                        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-                        border: 1px solid #e2e8f0;
-                        transition: all 0.3s ease;
-                        font-size: 0.95rem;
-                    }
 
-                    .location-pill:hover {
-                        background: #2563eb;
-                        color: white;
-                        transform: translateY(-2px);
-                        box-shadow: 0 4px 6px rgba(37, 99, 235, 0.2);
-                        border-color: #2563eb;
-                    }
-
-                    .location-pill strong {
-                        font-weight: 700;
-                    }
-                </style>
-            </div>
-        </section>
 
 
 
@@ -1634,7 +1586,8 @@
                 </div>
                 <div class="coverage-footer"
                     style="margin-top: 3rem; font-size: 0.8rem; color: #64748b; font-weight: 400;">
-                    <p>También atendemos trámites en: Atizapán de Zaragoza, Chapa de Mota, Jilotzingo, Nicolás Romero,
+                    <p>También atendemos trámites en: Nezahualcóyotl, Metepec, Toluca, Atizapán de Zaragoza, Chapa de
+                        Mota, Jilotzingo, Nicolás Romero,
                         Tecámac, Valle de Chalco, La Paz, y toda la Zona Metropolitana del Valle de México.</p>
                 </div>
             </div>
